test/tests/errors/error-trap-label-not-exp.sm
// true
// false
// false
/**/
/**/

program {
    trap {
        var x: int = a + 1;
a:
        output x;
    }
}